# mcp-desktop-gateway

./: .gitignore  .npmignore  .pre-commit-config.yaml  .semverrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  PUBLISH_GUIDE.md  QUICKSTART.md  README.md  README.npm.md  VERSION_HISTORY.md  benchmark_performance.py  build_nuitka.sh  claude_desktop_config.json  compile_bytecode.py  dev-setup.sh  mcp-gateway-dev  mcp_gateway_compiled.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_mcp_gateway_simple.py  run_pypy.sh  setup.py  setup_cython.py  test-package.sh
.github/workflows/: python-modern.yml
claude-configs/: dev-config.json
config/: config.yaml
docs/: ARCHITECTURE.md  INSTRUCTIONS.md  PROJECT.md  VERSIONING.md  WORKFLOW.md
docs/design/: MCP-best-practices.md  modernization-summary.md  python-best-practices.md
docs/examples/: getting-started.md
docs/issues/: 001-hello-world-poc.md
lib/: cli.js
poc/: README.md  hello_world_poc.py  run_hello_world.py
prompt_training/configs/: auto_training.json
scripts/: install-claude-config.sh  merge_config.py  run_enhanced_unified.py  run_gateway.py  run_tests.py  test_mcp_service.py  version.py
specs/: connector-api.yaml
src/: __init__.py
src/connectors/applescript/: connector.py
src/connectors/gateway_utils/: connector.py
src/connectors/hello_world/: connector.py
src/connectors/shell/: connector.py
src/core/: base_connector.py
src/prompt_training/: README.md  __init__.py  cli.py  integration.py  prompt_manager.py
user-scripts/: README.md  manage.py
user-scripts/applescript/templates/: basic_script.applescript
user-scripts/javascript/templates/: basic_script.js  package.json
user-scripts/python/templates/: basic_script.py  requirements.txt
user-scripts/shared/configs/: example_config.json
(+4 files in other folders)
