[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-desktop-gateway"
version = "1.0.0"
description = "A flexible gateway for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "MCP Desktop Gateway Contributors"},
]
keywords = ["mcp", "model-context-protocol", "claude", "ai", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.9.3",
    "pydantic>=2.11.5",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

rest-api = [
    "fastapi>=0.112.2",
    "uvicorn>=0.32.1",
    "motor>=3.7.0",
    "sse-starlette>=2.1.3",
    "httpx>=0.27.2",
]

[project.scripts]
# These will be wrapper scripts created during installation

[tool.setuptools]
packages = ["core", "connectors", "rest_api", "unified_backend"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.example.yaml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true